--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,3 +27,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_2DSideScrollerBP",NewGameName="/Script/TCSFight")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/TCSFight")
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-1300.000000
+
